Estilos de botones de idioma ajustados y refinados

--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -1,25 +1,7 @@
 {
-  "hero_title": "Crea Experiencias Web Deslumbrantes",
-  "hero_subtitle": "La librería moderna de diseño y animación para React. Dale vida a tu sitio con animaciones hermosas y sin esfuerzo.",
-  "signup_button": "Pruébalo Gratis",
-  "nav_features": "Características",
-  "nav_pricing": "Precios",
-  "nav_contact": "Contacto",
-  "nav_signup": "Registrarse",
-  "footer_company": "Compañía",
-  "footer_about": "Sobre Nosotros",
-  "footer_careers": "Empleo",
-  "footer_press": "Prensa",
-  "footer_product": "Producto",
-  "footer_features": "Funcionalidades",
-  "footer_security": "Seguridad",
-  "footer_custom": "Personalizado",
-  "footer_social": "Redes Sociales",
-  "footer_github": "GitHub",
-  "footer_twitter": "Twitter",
-  "footer_instagram": "Instagram",
-  "footer_legal": "Legal",
-  "footer_privacy": "Privacidad",
-  "footer_terms": "Términos",
-  "footer_bottom_text": "© 2024 Pointer. Todos los Derechos Reservados."
+  "features": "Funcionalidades",
+  "pricing": "Precios",
+  "contact": "Contacto",
+  "signIn": "Iniciar Sesión",
+  "signUp": "Registrarse"
 }
